--- a/src/pages/App/Organizer.css
+++ b/src/pages/App/Organizer.css
@@ -1,5 +1,6 @@
 .organizer-body {
     color:white;
+    height: 85vh;
 }
 
 .organizer-subpage-content-container {
